--- a/flask/package.json
+++ b/flask/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "state-props",
+  "name": "flask",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "md5": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
